--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-    
+    <header>
+        <h1>Dav's Diner</h1>
+        <p>The best vegan diner you can imagine</p>
+    </header>
+    <main>
+      <section id="menu">
+      </section>  
+    </mai>
+
 </body>
 
 </html>
