--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     </header>
     <main>
       <section id="menu">
-      </section>  
-    </mai>
+      </section> 
+      <section id="checkout">
 
+      </section> 
+    </main>
+    
 </body>
 
 </html>
