--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dav's Dinner</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Smythe&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
+        rel="stylesheet">
     <script type="module" src="index.js" defer></script>
 </head>
 
@@ -14,13 +20,13 @@
         <p>The best vegan diner you can imagine</p>
     </header>
     <main>
-      <section id="menu">
-      </section> 
-      <section id="checkout">
+        <section id="menu">
+        </section>
+        <section id="checkout" disabled>
 
-      </section> 
+        </section>
     </main>
-    
+
 </body>
 
 </html>
