--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     </header>
     <main>
         <section id="menu">
+            <div class="menu-item" id="menu-item">
+                <img src="">
+                <div>
+                    <p class="item-name"></p>
+                    <p class="item-ingredients"></p>
+                    <p class="item-price"></p>
+                </div>
+                <button class="add-btn" id="add-btn"></button>
+            </div>
         </section>
         <section id="checkout" disabled>
 
