--- a/index.html
+++ b/index.html
@@ -22,13 +22,31 @@
     <main>
         <section id="menu">
             <div class="menu-item" id="menu-item">
-                <img src="">
+                <img src="images\burger.png">
                 <div>
-                    <p class="item-name"></p>
-                    <p class="item-ingredients"></p>
-                    <p class="item-price"></p>
+                    <p class="item-name">Burger</p>
+                    <p class="item-ingredients">Ingredientes</p>
+                    <p class="item-price">£2</p>
                 </div>
-                <button class="add-btn" id="add-btn"></button>
+                <button class="add-btn" id="add-btn">+</button>
+            </div>
+            <div class="menu-item" id="menu-item">
+                <img src="images\burger.png">
+                <div>
+                    <p class="item-name">Burger</p>
+                    <p class="item-ingredients">Ingredientes</p>
+                    <p class="item-price">£2</p>
+                </div>
+                <button class="add-btn" id="add-btn">+</button>
+            </div>
+            <div class="menu-item" id="menu-item">
+                <img src="images\burger.png">
+                <div>
+                    <p class="item-name">Burger</p>
+                    <p class="item-ingredients">Ingredientes</p>
+                    <p class="item-price">£2</p>
+                </div>
+                <button class="add-btn" id="add-btn">+</button>
             </div>
         </section>
         <section id="checkout" disabled>
