--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
     <main>
         <section id="menu">
             <div class="menu-item" id="menu-item">
-                <img src="images\burger.png">
-                <div>
+                <img class="item-img" src="images\pizza.png">
+                <div class="item-info">
+                    <p class="item-name">Pizza</p>
+                    <p class="item-ingredients">Ingredientes</p>
+                    <p class="item-price">£2</p>
+                </div>
+                <button class="add-btn" id="add-btn">+</button>
+            </div>
+            <div class="menu-item" id="menu-item">
+                <img class="item-img" src="images\burger.png">
+                <div class="item-info">
                     <p class="item-name">Burger</p>
                     <p class="item-ingredients">Ingredientes</p>
                     <p class="item-price">£2</p>
@@ -31,18 +40,9 @@
                 <button class="add-btn" id="add-btn">+</button>
             </div>
             <div class="menu-item" id="menu-item">
-                <img src="images\burger.png">
-                <div>
-                    <p class="item-name">Burger</p>
-                    <p class="item-ingredients">Ingredientes</p>
-                    <p class="item-price">£2</p>
-                </div>
-                <button class="add-btn" id="add-btn">+</button>
-            </div>
-            <div class="menu-item" id="menu-item">
-                <img src="images\burger.png">
-                <div>
-                    <p class="item-name">Burger</p>
+                <img class="item-img" src="images\beer.png">
+                <div class="item-info">
+                    <p class="item-name">Beer</p>
                     <p class="item-ingredients">Ingredientes</p>
                     <p class="item-price">£2</p>
                 </div>
