--- a/index.html
+++ b/index.html
@@ -21,38 +21,8 @@
         <p>The best vegan diner you can imagine</p>
     </header>
     <main>
-        <section id="menu">
-            <div class="menu-item" id="menu-item">
-                <img class="item-img" src="images\pizza.png">
-                <div class="item-info">
-                    <p class="item-name">Pizza</p>
-                    <p class="item-ingredients">Ingredientes</p>
-                    <p class="item-price">£2</p>
-                </div>
-                <button class="add-btn" id="add-btn">+</button>
-            </div>
-            <div class="menu-item" id="menu-item">
-                <img class="item-img" src="images\burger.png">
-                <div class="item-info">
-                    <p class="item-name">Burger</p>
-                    <p class="item-ingredients">Ingredientes</p>
-                    <p class="item-price">£2</p>
-                </div>
-                <button class="add-btn" id="add-btn">+</button>
-            </div>
-            <div class="menu-item" id="menu-item">
-                <img class="item-img" src="images\beer.png">
-                <div class="item-info">
-                    <p class="item-name">Beer</p>
-                    <p class="item-ingredients">Ingredientes</p>
-                    <p class="item-price">£2</p>
-                </div>
-                <button class="add-btn" id="add-btn">+</button>
-            </div>
-        </section>
-        <section id="checkout" disabled>
-
-        </section>
+        <section id="menu"></section>
+        <section id="checkout" disabled></section>
     </main>
 
 </body>
