Add shell for checkout section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
     </header>
     <main>
         <section id="menu"></section>
-        <section id="checkout" disabled></section>
+        <section id="checkout">
+            <h2>Your order</h2>
+            <div id="order-lines-container">
+                <p>Pizza <span>(remove)</span></p>
+                <p>Burger <span>(remove)</span></p>
+                <p>Beer <span>(remove)</span></p>
+            </div>
+            <div>
+                <p>Total price:</p>
+            </div>
+            <button>Complete order</button>
+        </section>
     </main>
 
 </body>
